Fixed container layout overflow. Fixed menuItems size overflow

--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,9 @@ body
 	height: 100%;
 	max-width: 100%;
 	display: grid;
-	grid-template-rows: 10% 80% 10%;
+	grid-template-rows: 10% 80% 7.5%;
 	grid-template-columns: 100%;
-	grid-row-gap: 5px;
+	grid-row-gap: 1%;
 }
 
 #menuItems
@@ -44,6 +44,7 @@ body
 	margin: auto;
 	width: 80%;
 	height: 90%;
+	max-height: 100%;
 	overflow: hidden;
 	display: flex;
 	justify-content: center;
@@ -231,7 +232,7 @@ body
 	display: flex;
 	gap: 3%;
 	justify-content: center;
-	/*align-items: center;*/
+	align-items: center;
 }
 
 #contactMe .bottomMenu
@@ -240,8 +241,9 @@ body
 	grid-template-rows: 100%;
 	grid-template-columns: 100%;
 	font-size: 2vw;
-	width: 5vw;
-	height: 5vw;
+	aspect-ratio: 1/1;
+	width: auto;
+	height: 80%;
 	overflow: hidden;
 	/*height: 60%;*/
 	background: rgba(255,255,255,0.0);
